@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2002/09/01 15:30:11 kim Exp $
+$NetBSD: distinfo,v 1.4 2003/05/10 17:18:09 kim Exp $
 
-SHA1 (irrd2.1.4.tar.gz) = 78135fa33cc8fe9fbdd0a290299d343e62ac748c
-Size (irrd2.1.4.tar.gz) = 855272 bytes
+SHA1 (irrd2.1.5.tgz) = eae93456058b5449d1a11ff88f609167a116bac8
+Size (irrd2.1.5.tgz) = 761652 bytes
