@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2211 2003/05/10 16:39:03 drochner Exp $
+$NetBSD: CHANGES,v 1.2212 2003/05/10 17:19:03 kim Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -1933,3 +1933,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated gperiodic to 2.0.4 [jtb 2003-05-09]
 	Added ssh2-nox11-3.2.2 [seb 2003-05-10]
 	Updated Mesa to 5.0.1 [drochner 2003-05-10]
+	Updated irrd to 2.1.5 [kim 2003-05-10]
